# MG

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/GalinStuff/: color.h  implicits.h  mathematics.h  mesh.cpp  mesh.h  meshcolor.cpp  meshcolor.h
src/Tree/: AsfTree.hpp  CMakeLists.txt  Node.cpp  Node.hpp
src/Tree/Operations/: BinOp.hpp  NOp.hpp  Opeartions.hpp  Operation.hpp  Translation.cpp  Translation.hpp  UnOp.cpp  UnOp.hpp  difference.cpp  difference.hpp  intersection.cpp  intersection.hpp  rotations.cpp  rotations.hpp  smoothDiff.cpp  smoothDiff.hpp  smoothInter.cpp  smoothInter.hpp  smoothUnion.cpp  smoothUnion.hpp  translation.cpp  translation.hpp  union.cpp  union.hpp
src/Tree/Shapes/: Shape.cpp  Shape.hpp  brick.cpp  brick.hpp  cylinder.cpp  cylinder.hpp  cylinderTest.cpp  sphere.cpp  sphere.hpp  sphereTest.cpp  tore.cpp  tore.hpp
src/tests/: CMakeLists.txt  brickTest.cpp  cylinderTest.cpp  differenceTest.cpp  intersectionTest.cpp  mainResult.cpp  rotationOnlyTest.cpp  rotationsMultiTest.cpp  smoothdiffTest.cpp  smoothinterTest.cpp  smoothunionTest.cpp  sphereTest.cpp  toreTest.cpp  translationTest.cpp  unionTest.cpp
